--- a/bespoke-remote/remote.html
+++ b/bespoke-remote/remote.html
@@ -34,14 +34,14 @@
     <button id="next">Next</button>
     <button id="prev">Previous</button>
 
-    <script src="http://localhost:8001/socket.io/socket.io.v0.9.15.js"></script>
+    <script src="http://localhost:<%= port %>/socket.io/socket.io.v0.9.15.js"></script>
     <script>
       var debug = document.getElementById('debug'),
           log = function (msg) { debug.innerHTML += '<p>'+msg+'</p>'; }
 
       log('Started...')
 
-      var socket = io.connect('http://localhost:8001/')
+      var socket = io.connect('http://localhost:<%= port %>/')
       socket.on('established', function() {
         log('&#9733; Connection established.')
         socket.emit('remoteReady', '');
